Some basic filtering, post to server and retrieve messages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
     <div id="main">
       <h1>Chat with JSON!</h1>
+      <div>
+        <h2></h2>
+        <input type="text" id="message" name="message"> <button id="send">Send</button>
+      </div>
+      <div id="chatBody"></div>
     </div>
 
   </body>
