Cleaned up the code a little bit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <h1>Chat with JSON!</h1>
       <div>
         <h2></h2>
-        <input type="text" id="message" name="message"> <button id="send">Send</button>
+        <form>
+          <input type="text" id="message" name="message"> <button id="send">Send</button>
+        </form>
       </div>
       <div id="chatBody"></div>
     </div>
