--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="vendor/jquery/jquery-1.9.1.js"></script>
     <script src="js/setup.js"></script>
+    <script src="js/moment.min.js"></script>
   </head>
   <body>
 
     <div id="main">
       <h1>Chat with JSON!</h1>
       <div>
-        <h2></h2>
-        <form>
-          <input type="text" id="message" name="message"> <button id="send">Send</button>
-        </form>
+        <h2 id='chatroom'></h2>
+        <h2 id='user'></h2>
+        <div>
+          <form>
+            <input type="text" id="message" name="message"> <button id="send">送る</button>
+          </form>
+        </div>
+
+        <div>
+          <form>
+            <input type="text" id="room" name="room"> <button id="create">行く</button>
+          </form>
+        </div>
       </div>
       <div id="chatBody"></div>
     </div>
