Finished the basic requirements for the sprint

--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
   <body>
 
     <div id="main">
-      <h1>Chat with JSON!</h1>
+      <h1>ジェイソンとはなそう</h1>
       <div>
         <h2 id='chatroom'></h2>
         <h2 id='user'></h2>
         <div>
           <form>
+            <label>メッセージ</label>
             <input type="text" id="message" name="message"> <button id="send">送る</button>
           </form>
         </div>
 
         <div>
           <form>
+            <label>部屋の名前</label>
             <input type="text" id="room" name="room"> <button id="create">行く</button>
           </form>
         </div>
